--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		div {
-			color: blueviolet;
+			color: rgb(10, 235, 216);
 		}
 	</style>
 	<title>Document</title>
